# Easysys-server

./: .env  Cargo.toml
migrations/: 20240310063147_sys-admin.up.sql
src/: main.rs
src/api/: LoginApi.rs
src/db_access/: LoginQuery.rs
src/errors/: error.rs
src/handlers/: LoginHandler.rs
src/models/: login.rs  responsedata.rs
src/router/: router.rs
src/state/: appstate.rs  db.rs
src/utils/: interceptor.rs  jwt.rs  middleware.rs
