

[package]
name = "Easysys-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls","mysql" ] }
serde = { version = "1.0.197" , features = ["derive"]}
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
